# apps/api/src/uvts_api/api/router.py
@@ -1,8 +1,9 @@
 from fastapi import APIRouter
 
-from uvts_api.api.routes import health, sessions, tests
+from uvts_api.api.routes import documents, health, sessions, tests
 
 api_router = APIRouter()
 api_router.include_router(health.router)
 api_router.include_router(sessions.router)
 api_router.include_router(tests.router)
+api_router.include_router(documents.router)
